<resources>
    <string name="app_name">ReLogin</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="not_registered_sign_up">Not Registered? Sign up</string>
    <string name="ashva">Ashva</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
</resources>